# HEIR

./: .gitattributes  .gitignore  README.md  pyproject.toml
assets/: pretrained_checkpoints.json
configs/: broad_type_supervised_gate.example.json  coverage_benchmark_plan.example.json  hescape_lung_regional_protocol.json  hest_lung_cell_protocol.json  hest_nonlinear_qualification_v1.json  independent_regional_confirmation_protocol.json  independent_regional_pilot_protocol.json  initialization_validation_plan.example.json  morphology_gate_calibration.json  morphology_ridge_plan.example.json  natcommun_fixed_ess_reference_sensitivity.json  natcommun_frozen_validation_protocol.json  natcommun_generative_development_protocol.json  natcommun_generative_gene_panel.json  natcommun_matched_regional_protocol.json  natcommun_matched_regional_protocol_v2.json  natcommun_matched_st_validation.json  performance_regression_fixture_v1.json  refinement_development_plan.example.json  snpatho_benchmark_plan.example.json  spatialdlpfc_exploratory_gene_panel.json  spatialdlpfc_exploratory_protocol.json  spatialdlpfc_exploratory_protocol_v2.json  specimen_level_matching_addendum.json
docs/: benchmark.md  benchmark_report.md  broad_type_supervised_gate.md  claim_boundaries.md  coverage_evaluation.md  data.md  estimator_versions.md  method.md  refinement_redesign.md  schaf_informed_roadmap.md  scientific_hypotheses.md  scientific_validation.md  snpatho_deepbench.md  snpatho_pipeline.md  snpatho_refinement_matrix.md  snpatho_unknown_mass_sensitivity.md  snpatho_unknown_mass_sensitivity_v2.md  validation.md  validation_gates.md
environments/: hne.yml
manifests/: broad_type_labels_template.tsv  gene_panel_example.tsv  gene_panel_snpatho_500.provenance.json  gene_panel_snpatho_500.tsv  gse243280_metadata_receipt.json  morphology_ridge_cohorts.tsv  natcommun.tsv  snpatho.tsv  spatialdlpfc_metadata_identity_receipt.json  spatialdlpfc_pilot_acquisition_receipt.json  spatialdlpfc_pilot_routing.tsv  spatialdlpfc_specimen_reference_assignments.tsv
model_cards/: heir_v0.1.md
reports/: hest_lock_exposure_audit.json  hest_nonlinear_qualification_protocol.md  hest_retrospective.md  hest_scientific_reanalysis.md  independent_regional_cohort_readiness.md  morphology_ridge_readiness.json  natcommun_generative_development_protocol.md  natcommun_generative_development_results.md  natcommun_hoptimus_primary_results_v2.md  (+16 more)
(+306 files in other folders)
