[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heir-spatial"
version = "0.1.0"
description = "Sample-matched snRNA-informed spatialization of molecular states onto H&E nuclei"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "HEIR contributors"}]
dependencies = [
  "numpy>=1.23,<3",
  "pandas>=1.5,<3",
  "PyYAML>=6",
  "scipy>=1.9",
  "scikit-learn>=1.2",
  "torch>=2.1",
]

[project.optional-dependencies]
h5ad = ["anndata>=0.9", "h5py>=3.8"]
image = ["Pillow>=9", "openslide-python>=1.3", "torchvision>=0.16"]
pathology = [
  "Pillow>=9",
  "openslide-python>=1.3",
  "torchvision>=0.18,<0.19",
  "open-clip-torch==2.26.1",
]
science = ["anndata>=0.9", "scanpy>=1.9", "scvi-tools>=1.1"]
dev = ["Pillow>=9", "h5py>=3.8", "pytest>=7", "pytest-cov>=4", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
heir = "heir.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["heir*"]

[tool.setuptools.package-data]
heir = ["resources/manifests/*.tsv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires optional dependencies or local public-cohort data",
  "gpu: requires a CUDA device",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
