[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heir-spatial"
version = "0.2.0"
description = "Compact falsification tests for morphology-associated molecular state"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "HEIR contributors"}]
dependencies = [
  "numpy>=1.23,<3",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.5"]
hescape = [
  "h5py>=3.8",
  "Pillow>=10",
  "pyarrow>=14",
  "timm>=1.0.15,<2",
  "torchvision>=0.16",
]
hest = [
  "duckdb>=1.1,<2",
  "imagecodecs>=2023.9.18,<2025",
  "pyarrow>=14,<23",
  "safetensors>=0.4",
  "tifffile>=2024.2,<2025.5",
  "timm>=1.0.15,<2",
  "torchvision>=0.16",
  "zarr>=2.17,<3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["heir*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
